# posty-microservice-python

./: docker-compose.yaml  makefile  nginx.conf  reverse-proxy-explaination.md
auth/: Dockerfile  pyproject.toml
auth/src/: __init__.py  config.py  inst_modifier.py
auth/src/database/: __init__.py
auth/src/users/: endpoints.py  models.py  repository.py
logic/: Dockerfile  main.py  pyproject.toml
